# RTracer

./: CMakeLists.txt  Makefile  README.md  camera.cpp  camera.h  hittable.h  hittable_list.h  image.ppm  light.h  main  main.cpp  material.h  ray.h  sphere.cpp  sphere.h  texture.h  transformations.h  triangle.cpp  triangle.h  utility.h  vec3.h
images/: RandomBalls
include/: aabb.h  material.h  math.h  trace.h  vec3.h
source/: CMakeLists.txt  main.cpp  sphere.cpp  triangle.cpp
source/include/: aabb.h  bvh.h  camera.h  hittable.h  hittable_list.h  light.h  math.h  ray.h  rng.h  sphere.h  trace.h  triangle.h  utility.h  vec3.h
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  math_tests.cpp
